--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'groovy'
 
 sourceSets {
-    jobs {
+    dsls {
         groovy {
             srcDirs 'dsls'
             compileClasspath += main.compileClasspath
@@ -21,5 +21,5 @@ dependencies {
 }
 
 test {
-    inputs.files sourceSets.jobs.groovy.srcDirs
+    inputs.files sourceSets.dsls.groovy.srcDirs
 }
