--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'groovy'
 
 sourceSets {
-    dsls {
+    planDefinitions {
         groovy {
-            srcDirs 'dsls'
+            srcDirs 'plan-definitions'
             compileClasspath += main.compileClasspath
         }
     }
@@ -21,5 +21,5 @@ dependencies {
 }
 
 test {
-    inputs.files sourceSets.dsls.groovy.srcDirs
+    inputs.files sourceSets.planDefinitions.groovy.srcDirs
 }
