--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,19 @@ sourceSets {
             srcDirs 'dsls'
             compileClasspath += main.compileClasspath
         }
+        compileClasspath += sourceSets.main.output
+        runtimeClasspath += sourceSets.main.output
     }
 }
 
 repositories {
     mavenCentral()
     maven { url "https://jitpack.io" }
+//    mavenLocal()
 }
 
 dependencies {
-    compile 'com.github.mibexsoftware:bamboo-plan-dsl-plugin:1.5.5'
+    compile 'com.github.mibexsoftware:bamboo-plan-dsl-plugin:1.6.0'
     compile group: 'org.apache.ant', name: 'ant', version: '1.8.2'
     testCompile('org.spockframework:spock-core:1.0-groovy-2.4')
 }
