--- a/build.gradle
+++ b/build.gradle
@@ -13,15 +13,17 @@ sourceSets {
 
 repositories {
     mavenCentral()
-    maven { url "https://jitpack.io" }
+    maven { url 'https://jitpack.io' }
+    maven { url 'https://packages.atlassian.com/maven/repository/public' }
 //    mavenLocal()
 }
 
 dependencies {
     compile 'com.github.mibexsoftware:bamboo-plan-dsl-plugin:1.9.3'
-//    compile 'ch.mibex.bamboo.plandsl:plan-dsl-lib:1.8.0'
+//    compile 'ch.mibex.bamboo.plandsl:plan-dsl-lib:1.9.3'
     compile group: 'org.apache.ant', name: 'ant', version: '1.8.2'
     testCompile('org.spockframework:spock-core:1.0-groovy-2.4')
+    compile group: 'com.atlassian.bamboo', name: 'atlassian-bamboo-api', version: '6.1.1'
 }
 
 test {
